[gd_scene load_steps=15 format=2]

[ext_resource path="res://tanks/Gunner.gd" type="Script" id=1]
[ext_resource path="res://bullets/EnemyBulletSmall.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/QUAD.png" type="Texture" id=3]
[ext_resource path="res://assets/mgf1.png" type="Texture" id=4]
[ext_resource path="res://assets/mgf2.png" type="Texture" id=5]
[ext_resource path="res://assets/mgf3.png" type="Texture" id=6]
[ext_resource path="res://assets/mgf4.png" type="Texture" id=7]
[ext_resource path="res://assets/onlyObjects_retina_rotated.png" type="Texture" id=8]
[ext_resource path="res://effects/Explosion.tscn" type="PackedScene" id=9]
[ext_resource path="res://ui/UnitDisplay.tscn" type="PackedScene" id=10]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 40.0229, 37.3374 )

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "shooting",
"speed": 12.0
} ]

[sub_resource type="Animation" id=3]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Turret/Flash:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=4]

length = 0.15
loop = false
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Turret/Flash:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.12, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Turret/Flash:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.03, 0.08 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 1.5, 1.5 ), Vector2( 1, 1 ) ]
}

[node name="Player" type="KinematicBody2D" index="0"]

input_pickable = false
collision_layer = 2
collision_mask = 5
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Transform", "collision" ]
__meta__ = {
"_edit_group_": true
}
Bullet = ExtResource( 2 )
max_speed = 300
rotation_speed = 5.0
gun_cooldown = 0.09
max_health = 500
gun_shots = 1
gun_spread = 0.2
_overheat = 3.0
_oh_cooldown = 1.0

[node name="Body" type="Sprite" parent="." index="0"]

texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 16, 31, 84.25, 58.5 )
_sections_unfolded = [ "Region" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

visible = false
shape = SubResource( 1 )

[node name="Turret" type="AnimatedSprite" parent="." index="2"]

scale = Vector2( 1.2, 0.7 )
frames = SubResource( 2 )
animation = "idle"
offset = Vector2( 18, 0 )
_sections_unfolded = [ "Offset", "Region", "Transform", "Z Index" ]

[node name="Muzzle" type="Position2D" parent="Turret" index="0"]

position = Vector2( 50, 0 )
_sections_unfolded = [ "Transform" ]

[node name="Flash" type="Sprite" parent="Turret" index="1"]

modulate = Color( 1, 1, 1, 4.76837e-007 )
position = Vector2( 55, 0 )
z_index = 1
texture = ExtResource( 8 )
offset = Vector2( 25, 0 )
region_enabled = true
region_rect = Rect2( 584, 58, 57, 32 )
_sections_unfolded = [ "Offset", "Region", "Transform", "Visibility", "Z Index" ]

[node name="GunTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="Camera2D" type="Camera2D" parent="." index="4"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1.4, 1.4 )
limit_left = 0
limit_top = 0
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
_sections_unfolded = [ "Limit" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="5"]

root_node = NodePath("..")
autoplay = "init"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/init = SubResource( 3 )
anims/muzzle_flash = SubResource( 4 )
blend_times = [  ]
_sections_unfolded = [ "Playback Options" ]

[node name="Explosion" parent="." index="6" instance=ExtResource( 9 )]

visible = false

[node name="Overheat" type="Timer" parent="." index="7"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="OH_Cooldown" type="Timer" parent="." index="8"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="OverHeatDisplay" parent="." index="9" instance=ExtResource( 10 )]

[connection signal="cooling" from="." to="." method="_on_Player_cooling"]

[connection signal="overheating" from="." to="." method="_on_Player_overheating"]

[connection signal="timeout" from="GunTimer" to="." method="_on_GunTimer_timeout"]

[connection signal="animation_finished" from="Explosion" to="." method="_on_Explosion_animation_finished"]

[connection signal="timeout" from="Overheat" to="." method="_on_Overheat_timeout"]

[connection signal="timeout" from="OH_Cooldown" to="." method="_on_OH_Cooldown_timeout"]


